# Titanic---Machine-Learning-from-Disaster

./: .env  .gitignore  MLproject  README.md  batch_predict_flow.py  dashboard.py  dvc.yaml  load_to_motherduck.py  main.py  monitor_flow.py  pipeline.py  predict.py  promote_model.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: titanic.yaml
configs/model/: gradient_boosting.yaml  logistic_regression.yaml  random_forest.yaml
configs/training/: default.yaml
data/processed/: .gitignore
metrics/: best_model.json  scores.json
models/: gradient_boosting.pkl  logistic_regression.pkl  random_forest.pkl
src/: cleaning.py  evaluate.py  feature_engineering.py  load_data.py  preprocess.py  register_model.py  training.py  tuning.py
src/stages/: clean.py  feature_engineering.py  load_data.py  train.py
