[project]
name = "titanic-machine-learning-from-disaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "dagshub>=0.7.0",
    "dvc[http]>=3.67.1",
    "dvclive>=3.49.0",
    "fastapi>=0.136.1",
    "hydra-core>=1.3.2",
    "isort>=8.0.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pandas>=3.0.2",
    "protobuf>=3.20.0,<4.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=65.5.0,<82.0.0",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "ruff>=0.15.11",
]
